== changelog.txt ==
= 1.4.5 =
* Update: Added search field for Site Options to include options not registered

= 1.4.4 =
* Tweak: Added full changelog to readme.txt
* Tweak: Updated changelog to use commonly used prefixes (Fix, Tweak, and Update)
* Tweak: Changed `date()` to `gmdate()` in activation hook (props [@sybrew](https://github.com/sybrew))
* Tweak: Changed multiple calls to `site_url()` to variable in root file (props [@sybrew](https://github.com/sybrew))
* Tweak: Moved `TESTING_PLAYGROUND.php` file to `includes` folder (props [@sybrew](https://github.com/sybrew))
* Fix: Patched security issues with downloads (props [@sybrew](https://github.com/sybrew))
* Fix: Unserialize notice on usermeta tab

= 1.4.3 =
* Fix: Error with GFAPI not being found on feed page
* Tweak: Sorted plugins alphabetically by name

= 1.4.2 =
* Update: Added quick debug links to Gravity Form entry page
* Tweak: Moved quick debug link results for Gravity Forms to it's own page instead of sharing the Testing tab
* Update: Added quick debug link for Gravity Forms feeds
* Update: Added more recommended plugins
* Tweak: Redacted sensitive information from view to hide when getting support and showing demos
* Fix: Shortcode finder attribute field not filtering out value properly

= 1.4.1 =
* Update: Added functions.php viewer

= 1.4.0 =
* Update: Added a simple functions.php viewer
* Update: Added backups sections to wp-config/htaccess tabs with ability to clear old backups
* Tweak: Disabled preview button on wp-config/htaccess tabs if nothing is checked or unchecked
* Fix: Deprecated function in online users class
* Fix: Admin side menu showing tabs for non-devs
* Tweak: Made cURL seconds field show/hide with JS instead of needing to save the changes first
* Update: Added settings link, website link, and Discord support link to plugins list page
* Update: Added message for user that activated the plugin with instructions on how to begin